--- a/PL/main volunteer/ChooseCallWindow.xaml
+++ b/PL/main volunteer/ChooseCallWindow.xaml
@@ -7,10 +7,10 @@
                    FontSize="20" FontWeight="Bold" HorizontalAlignment="Center" Margin="10"/>
 
         <!-- Displaying Volunteer Information -->
-        <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" Margin="10" Width="698">
+        <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" Margin="10">
             <TextBlock Text="Volunteer Current Address:" VerticalAlignment="Center" Margin="5"/>
             <TextBlock Text="{Binding Volunteer.Address}" VerticalAlignment="Center" Margin="5"/>
-            <TextBlock Text="Distance from Volunteer (km):" VerticalAlignment="Center" Margin="5" RenderTransformOrigin="0.782,0.717" Width="163"/>
+            <TextBlock Text="Distance from Volunteer (km):" VerticalAlignment="Center" Margin="5"/>
             <TextBlock Text="{Binding Volunteer.Distance}" VerticalAlignment="Center" Margin="5"/>
         </StackPanel>
 
@@ -19,15 +19,12 @@
             <TextBlock Text="Filter by Distance (km):" VerticalAlignment="Center" Margin="5"/>
             <TextBox Width="80" Margin="0,0,20,0" VerticalAlignment="Center"/>
 
-          
-
             <TextBlock Text="Sort by:" VerticalAlignment="Center" Margin="10"/>
             <ComboBox Width="150" Margin="0,0,10,0" VerticalAlignment="Center">
                 <ComboBoxItem Content="Distance"/>
                 <ComboBoxItem Content="Description"/>
                 <ComboBoxItem Content="Opening Time"/>
             </ComboBox>
-
         </StackPanel>
 
         <!-- Calls List -->
@@ -48,27 +45,27 @@
                     <ColumnDefinition Width="140"/>
                 </Grid.ColumnDefinitions>
 
-                <!-- Column Headers -->
-                <Border Grid.Column="0" Grid.Row="0" BorderBrush="Black" BorderThickness="1" Margin="10,0,0,408" Grid.RowSpan="2">
-                    <TextBlock Text="ID" FontWeight="ExtraBold" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5"/>
+                <!-- Column Headers with Borders -->
+                <Border Grid.Column="0" BorderBrush="Black" BorderThickness="1">
+                    <TextBlock Text="ID" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5"/>
                 </Border>
-                <Border Grid.Column="1" Grid.Row="0" BorderBrush="Black" BorderThickness="1">
-                    <TextBlock Text="Call Type" FontWeight="ExtraBold" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5"/>
+                <Border Grid.Column="1" BorderBrush="Black" BorderThickness="1">
+                    <TextBlock Text="Call Type" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5"/>
                 </Border>
-                <Border Grid.Column="2" Grid.Row="0" BorderBrush="Black" BorderThickness="1">
-                    <TextBlock Text="Description" FontWeight="ExtraBold" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5"/>
+                <Border Grid.Column="2" BorderBrush="Black" BorderThickness="1">
+                    <TextBlock Text="Description" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5"/>
                 </Border>
-                <Border Grid.Column="3" Grid.Row="0" BorderBrush="Black" BorderThickness="1">
-                    <TextBlock Text="Address" FontWeight="ExtraBold" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5"/>
+                <Border Grid.Column="3" BorderBrush="Black" BorderThickness="1">
+                    <TextBlock Text="Address" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5"/>
                 </Border>
-                <Border Grid.Column="4" Grid.Row="0" BorderBrush="Black" BorderThickness="1">
-                    <TextBlock Text="Opening Time" FontWeight="ExtraBold" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5"/>
+                <Border Grid.Column="4" BorderBrush="Black" BorderThickness="1">
+                    <TextBlock Text="Opening Time" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5"/>
                 </Border>
-                <Border Grid.Column="5" Grid.Row="0" BorderBrush="Black" BorderThickness="1" Margin="0,0,10,408" Grid.RowSpan="2">
-                    <TextBlock Text="Distance" FontWeight="ExtraBold" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5"/>
+                <Border Grid.Column="5" BorderBrush="Black" BorderThickness="1">
+                    <TextBlock Text="Distance" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5"/>
                 </Border>
 
-                <!-- Calls Data -->
+                <!-- Calls Data with Borders -->
                 <ItemsControl Grid.Row="1" Grid.ColumnSpan="6" ItemsSource="{Binding CallsList}">
                     <ItemsControl.ItemTemplate>
                         <DataTemplate>
@@ -82,7 +79,6 @@
                                     <ColumnDefinition Width="140"/>
                                 </Grid.ColumnDefinitions>
 
-                                <!-- Call Data Fields -->
                                 <Border Grid.Column="0" BorderBrush="Black" BorderThickness="1">
                                     <TextBlock Text="{Binding Id}" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5"/>
                                 </Border>
@@ -90,18 +86,17 @@
                                     <TextBlock Text="{Binding CallType}" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5"/>
                                 </Border>
                                 <Border Grid.Column="2" BorderBrush="Black" BorderThickness="1">
-                                    <TextBlock Text="{Binding Address}" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5"/>
+                                    <TextBlock Text="{Binding Description}" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5"/>
                                 </Border>
                                 <Border Grid.Column="3" BorderBrush="Black" BorderThickness="1">
-                                    <TextBlock Text="{Binding OpeningTime}" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5"/>
+                                    <TextBlock Text="{Binding Address}" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5"/>
                                 </Border>
                                 <Border Grid.Column="4" BorderBrush="Black" BorderThickness="1">
-                                    <TextBlock Text="{Binding DistanceFromVolunteer}" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5"/>
+                                    <TextBlock Text="{Binding OpeningTime}" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5"/>
                                 </Border>
-
-                          
-                                <!-- Description TextBlock -->
-                                <TextBlock Name="DescriptionTextBlock" Grid.Row="2" Grid.ColumnSpan="6" Text="{Binding Description}" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="5" Visibility="Collapsed"/>
+                                <Border Grid.Column="5" BorderBrush="Black" BorderThickness="1">
+                                    <TextBlock Text="{Binding Distance}" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5"/>
+                                </Border>
                             </Grid>
                         </DataTemplate>
                     </ItemsControl.ItemTemplate>
