--- a/PL/main volunteer/VolunteerMainWindow.xaml
+++ b/PL/main volunteer/VolunteerMainWindow.xaml
@@ -2,32 +2,35 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Volunteer Information" Height="600" Width="800"
-        DataContext="{Binding RelativeSource={RelativeSource Mode=Self}}">
-
+        DataContext="{Binding RelativeSource={RelativeSource Mode=Self}}"
+    FontWeight="Bold">
     <Grid>
         <!-- Name -->
         <StackPanel Orientation="Horizontal" Margin="10,10,0,0" VerticalAlignment="Top">
             <TextBlock Text="Name:" FontSize="14" VerticalAlignment="Center"/>
-            <TextBox Text="{Binding Volunteer.Name, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" FontSize="14" Margin="10,0,0,0" VerticalAlignment="Center" Width="128"/>
+            <TextBox Text="{Binding Volunteer.Name, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" FontSize="14" Margin="10,0,0,0" VerticalAlignment="Center" Width="244"/>
         </StackPanel>
 
         <!-- Phone -->
         <StackPanel Orientation="Horizontal" Margin="10,40,0,0" VerticalAlignment="Top">
             <TextBlock Text="Phone:" FontSize="14" VerticalAlignment="Center"/>
-            <TextBox Text="{Binding Volunteer.Number_phone, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" FontSize="14" Margin="10,0,0,0" VerticalAlignment="Center" Width="126"/>
+            <TextBox Text="{Binding Volunteer.Number_phone, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" FontSize="14" Margin="10,0,0,0" VerticalAlignment="Center" Width="241"/>
         </StackPanel>
 
         <!-- Email -->
         <StackPanel Orientation="Horizontal" Margin="10,70,0,0" VerticalAlignment="Top">
             <TextBlock Text="Email:" FontSize="14" VerticalAlignment="Center"/>
-            <TextBox Text="{Binding Volunteer.Email, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" FontSize="14" Margin="10,0,0,0" VerticalAlignment="Center" Width="132"/>
+            <TextBox Text="{Binding Volunteer.Email, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" FontSize="14" Margin="10,0,0,0" VerticalAlignment="Center" Width="246"/>
         </StackPanel>
 
         <!-- Address -->
-        <StackPanel Orientation="Horizontal" Margin="10,100,0,0" VerticalAlignment="Top">
-            <TextBlock Text="Current Address:" FontSize="14" VerticalAlignment="Center"/>
-            <TextBox Text="{Binding Volunteer.FullCurrentAddress, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" FontSize="14" Margin="10,0,0,0" VerticalAlignment="Center" Width="264"/>
+        <StackPanel Orientation="Vertical" Margin="10,100,0,0" VerticalAlignment="Top" HorizontalAlignment="Left">
+            <TextBlock Text="Current Address:" FontSize="14" RenderTransformOrigin="0.472,0.593" Height="31"/>
+            <TextBox Text="{Binding Volunteer.FullCurrentAddress, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
+             FontSize="14" Width="296" TextChanged="TextBox_TextChanged" Height="26"/>
         </StackPanel>
+
+
 
         <StackPanel Orientation="Horizontal" Margin="10,160,0,0" VerticalAlignment="Top">
             <TextBlock Text="Active :" FontSize="14" VerticalAlignment="Center"/>
@@ -38,7 +41,7 @@
         <!-- Distance -->
         <StackPanel Orientation="Horizontal" Margin="10,190,0,0" VerticalAlignment="Top">
             <TextBlock Text="Distance:" FontSize="14" VerticalAlignment="Center"/>
-            <TextBox Text="{Binding Volunteer.Distance, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" FontSize="14" Margin="10,0,0,0" VerticalAlignment="Center" Width="145"/>
+            <TextBox Text="{Binding Volunteer.Distance, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" FontSize="14" Margin="10,0,0,0" VerticalAlignment="Center" Width="226"/>
         </StackPanel>
 
 
@@ -93,7 +96,7 @@
             </StackPanel>
 
             <StackPanel Orientation="Horizontal">
-                <TextBlock Text="Status:" FontSize="14" FontWeight="Bold" VerticalAlignment="Center" />
+                <TextBlock Text="Status:" FontSize="14" FontWeight="Bold" />
                 <TextBlock Text="{Binding Volunteer.CurrentCall.Status}" FontSize="14" Margin="10,0,0,0" VerticalAlignment="Center" Width="341"/>
             </StackPanel>
         </StackPanel>
@@ -117,17 +120,23 @@
         </StackPanel>
 
         <!-- Update Details Button -->
-        <Button Content="Update Details" FontSize="14" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10, 300, 0, 0" Click="UpdateVolunteerButton_Click"/>
+        <Button Content="Update Details" FontSize="14" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,244,0,0" Click="UpdateVolunteerButton_Click"
+                 Background="#4DA1A9" 
+ Foreground="White" />
 
         <!-- End Current Call Button -->
-        <Button Content="End Current Call" FontSize="14" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="548,323,0,0" Click="EndCallButton_Click" Visibility="{Binding CurrentCallVisibilityEnd}" RenderTransformOrigin="0.613,0.665"/>
-        <Button Content="Cancel Call" FontSize="14" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="400,323,0,0" Click="CancelCallButton_Click" Visibility="{Binding CurrentCallVisibilityEnd}" RenderTransformOrigin="0.613,0.665"/>
+        <Button Content="End Current Call" FontSize="14" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="400,363,0,0" Click="EndCallButton_Click" Visibility="{Binding CurrentCallVisibilityEnd}" RenderTransformOrigin="0.467,0.576"  Background="DeepSkyBlue" 
+ Foreground="White" />
+        <Button Content="Cancel Call" FontSize="14" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="400,323,0,0" Click="CancelCallButton_Click" Visibility="{Binding CurrentCallVisibilityEnd}" RenderTransformOrigin="0.613,0.665"  Background="RoyalBlue" 
+ Foreground="White" />
 
         <!-- Choose Call Button -->
-        <Button Content="Choose Call to Handle" FontSize="14" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="37,460,0,0" Click="ChooseCallButton_Click" Visibility="{Binding CurrentCallVisibility}"/>
+        <Button Content="Choose Call" FontSize="14" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="142,519,0,0" Click="ChooseCallButton_Click" Visibility="{Binding CurrentCallVisibility}"  Background="LightSkyBlue" 
+ Foreground="White" />
 
         <!-- View Volunteer Call History -->
-        <Button Content="View Volunteer Call History" FontSize="14" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="220,460,0,0" Click="ViewVolunteerHistoryButton_Click"/>
+        <Button Content="Call History" FontSize="14" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="30,519,0,0" Click="ViewVolunteerHistoryButton_Click"  Background="DodgerBlue" 
+ Foreground="White" />
 
     </Grid>
 </Window>
