--- a/PL/main volunteer/ChooseCallWindow.xaml
+++ b/PL/main volunteer/ChooseCallWindow.xaml
@@ -2,17 +2,10 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Choose Call for Volunteer" Height="600" Width="1000">
+
     <DockPanel>
         <TextBlock DockPanel.Dock="Top" Text="Choose Call for Volunteer"
                    FontSize="20" FontWeight="Bold" HorizontalAlignment="Center" Margin="10"/>
-
-        <!-- Displaying Volunteer Information -->
-        <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" Margin="10">
-            <TextBlock Text="Volunteer Current Address:" VerticalAlignment="Center" Margin="5"/>
-            <TextBlock Text="{Binding Volunteer.Address}" VerticalAlignment="Center" Margin="5"/>
-            <TextBlock Text="Distance from Volunteer (km):" VerticalAlignment="Center" Margin="5"/>
-            <TextBlock Text="{Binding Volunteer.Distance}" VerticalAlignment="Center" Margin="5"/>
-        </StackPanel>
 
         <!-- Filter and Sort Controls -->
         <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" HorizontalAlignment="Center" Margin="10">
@@ -38,11 +31,11 @@
                 <!-- Column Definitions -->
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="100"/>
-                    <ColumnDefinition Width="100"/>
+                    <ColumnDefinition Width="150"/>
                     <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="160"/>
-                    <ColumnDefinition Width="160"/>
-                    <ColumnDefinition Width="140"/>
+                    <ColumnDefinition Width="150"/>
+                    <ColumnDefinition Width="120"/>
+                    <ColumnDefinition Width="100"/>
                 </Grid.ColumnDefinitions>
 
                 <!-- Column Headers with Borders -->
@@ -53,30 +46,30 @@
                     <TextBlock Text="Call Type" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5"/>
                 </Border>
                 <Border Grid.Column="2" BorderBrush="Black" BorderThickness="1">
-                    <TextBlock Text="Description" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5"/>
-                </Border>
-                <Border Grid.Column="3" BorderBrush="Black" BorderThickness="1">
                     <TextBlock Text="Address" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5"/>
                 </Border>
-                <Border Grid.Column="4" BorderBrush="Black" BorderThickness="1">
+                <Border Grid.Column="3" BorderBrush="Black" BorderThickness="1">
                     <TextBlock Text="Opening Time" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5"/>
                 </Border>
-                <Border Grid.Column="5" BorderBrush="Black" BorderThickness="1">
+                <Border Grid.Column="4" BorderBrush="Black" BorderThickness="1">
                     <TextBlock Text="Distance" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5"/>
+                </Border>
+                <Border Grid.Column="5" BorderBrush="Black" BorderThickness="1">
+                    <TextBlock Text="Select" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5"/>
                 </Border>
 
                 <!-- Calls Data with Borders -->
-                <ItemsControl Grid.Row="1" Grid.ColumnSpan="6" ItemsSource="{Binding CallsList}">
-                    <ItemsControl.ItemTemplate>
+                <ListBox Grid.Row="1" Grid.ColumnSpan="6" ItemsSource="{Binding OpenCallList}" SelectedItem="{Binding SelectedCall}" SelectionChanged="ListBox_SelectionChanged">
+                    <ListBox.ItemTemplate>
                         <DataTemplate>
                             <Grid>
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="100"/>
-                                    <ColumnDefinition Width="100"/>
+                                    <ColumnDefinition Width="150"/>
                                     <ColumnDefinition Width="*"/>
-                                    <ColumnDefinition Width="160"/>
-                                    <ColumnDefinition Width="160"/>
-                                    <ColumnDefinition Width="140"/>
+                                    <ColumnDefinition Width="150"/>
+                                    <ColumnDefinition Width="120"/>
+                                    <ColumnDefinition Width="100"/>
                                 </Grid.ColumnDefinitions>
 
                                 <Border Grid.Column="0" BorderBrush="Black" BorderThickness="1">
@@ -86,21 +79,21 @@
                                     <TextBlock Text="{Binding CallType}" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5"/>
                                 </Border>
                                 <Border Grid.Column="2" BorderBrush="Black" BorderThickness="1">
-                                    <TextBlock Text="{Binding Description}" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5"/>
+                                    <TextBlock Text="{Binding FullAddress}" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5"/>
                                 </Border>
                                 <Border Grid.Column="3" BorderBrush="Black" BorderThickness="1">
-                                    <TextBlock Text="{Binding Address}" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5"/>
+                                    <TextBlock Text="{Binding OpenTime}" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5"/>
                                 </Border>
                                 <Border Grid.Column="4" BorderBrush="Black" BorderThickness="1">
-                                    <TextBlock Text="{Binding OpeningTime}" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5"/>
+                                    <TextBlock Text="{Binding DistanceFromVolunteer}" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5"/>
                                 </Border>
                                 <Border Grid.Column="5" BorderBrush="Black" BorderThickness="1">
-                                    <TextBlock Text="{Binding Distance}" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5"/>
+                                    <Button Content="Select" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5" Click="SelectButton_Click"/>
                                 </Border>
                             </Grid>
                         </DataTemplate>
-                    </ItemsControl.ItemTemplate>
-                </ItemsControl>
+                    </ListBox.ItemTemplate>
+                </ListBox>
             </Grid>
         </ScrollViewer>
     </DockPanel>
