Beginning of Call screens, we did not finish the previous ChooseCallWindow screen

--- a/PL/App.xaml
+++ b/PL/App.xaml
@@ -17,6 +17,7 @@
         <local:ClosedCallInListEnum x:Key="ClosedCallInListEnumKey" />
         <local:ClosedCallInListEnumToBackgroundConverter x:Key="ClosedCallInListEnumToBackgroundConverterKey" />
         <local:CalltypeToBackgroundConverter x:Key="CalltypeToBackgroundConverterKey" />
+        <!--<local:ConvertUpdateToTrue x:Key="ConvertUpdateToTrueKey" />-->
 
 
 
