--- a/PL/App.xaml
+++ b/PL/App.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:PL"
              StartupUri="login/LoginSystem.xaml">
-    <!--StartupUri="MainWindow.xaml">-->  
+    <!--StartupUri="MainWindow.xaml">-->
     <Application.Resources>
         <local:Roles x:Key="RolesKey" />
         <local:DistanceTypes x:Key="DistanceTypesKey" />
@@ -17,10 +17,7 @@
         <local:ClosedCallInListEnum x:Key="ClosedCallInListEnumKey" />
         <local:ClosedCallInListEnumToBackgroundConverter x:Key="ClosedCallInListEnumToBackgroundConverterKey" />
         <local:CalltypeToBackgroundConverter x:Key="CalltypeToBackgroundConverterKey" />
+        <local:CallInListFieldEnum x:Key="CallInListFieldEnumKey"/>
         <!--<local:ConvertUpdateToTrue x:Key="ConvertUpdateToTrueKey" />-->
-
-
-
-
     </Application.Resources>
 </Application>
