--- a/PL/App.xaml
+++ b/PL/App.xaml
@@ -15,7 +15,9 @@
         <local:PasswordConverter x:Key="PasswordConverterKey" />
         <local:Calltype x:Key="CalltypeKey" />
         <local:ClosedCallInListEnum x:Key="ClosedCallInListEnumKey" />
+        <local:OpenCallInListEnum x:Key="OpenCallInListEnumKey" />
         <local:ClosedCallInListEnumToBackgroundConverter x:Key="ClosedCallInListEnumToBackgroundConverterKey" />
+        <local:OpenCallInListEnumToBackgroundConverter x:Key="OpenCallInListEnumToBackgroundConverterKey" />
         <local:CallInListEnumToBackgroundConverter x:Key="CallInListEnumToBackgroundConverterKey" />
         <local:CalltypeToBackgroundConverter x:Key="CalltypeToBackgroundConverterKey" />
         <local:CallInListEnum x:Key="CallInListEnumKey" />
