--- a/PL/main volunteer/ChooseCallWindow.xaml
+++ b/PL/main volunteer/ChooseCallWindow.xaml
@@ -9,15 +9,37 @@
 
         <!-- Filter and Sort Controls -->
         <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" HorizontalAlignment="Center" Margin="10">
-            <TextBlock Text="Filter by Distance (km):" VerticalAlignment="Center" Margin="5"/>
-            <TextBox Width="80" Margin="0,0,20,0" VerticalAlignment="Center"/>
-
+          
             <TextBlock Text="Sort by:" VerticalAlignment="Center" Margin="10"/>
-            <ComboBox Width="150" Margin="0,0,10,0" VerticalAlignment="Center">
-                <ComboBoxItem Content="Distance"/>
-                <ComboBoxItem Content="Description"/>
-                <ComboBoxItem Content="Opening Time"/>
+            <ComboBox Width="150" Margin="0,0,10,0" VerticalAlignment="Center"
+                ItemsSource="{Binding Source={StaticResource OpenCallInListEnumKey}}" 
+                SelectedItem="{Binding Call.OpenCallList, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                SelectionChanged="SortCallListByCriteria"
+                Height="22" RenderTransformOrigin="0.345,2.911">
+                <ComboBox.ItemTemplate>
+                    <DataTemplate>
+                        <Grid Background="{Binding Converter={StaticResource OpenCallInListEnumToBackgroundConverterKey}}">
+                            <TextBlock Text="{Binding}" VerticalAlignment="Center" HorizontalAlignment="Left" Padding="10"/>
+                        </Grid>
+                    </DataTemplate>
+                </ComboBox.ItemTemplate>
             </ComboBox>
+            
+            <TextBlock Text="Filter by:" VerticalAlignment="Center" Margin="10"/>
+            <ComboBox Width="150" Margin="0,0,10,0" VerticalAlignment="Center"
+                ItemsSource="{Binding Source={StaticResource CalltypeKey}}" 
+                SelectedItem="{Binding Call.OpenCallList, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                SelectionChanged="FilterCallListByCriteria"
+                Height="22" RenderTransformOrigin="0.345,2.911">
+                <ComboBox.ItemTemplate>
+                    <DataTemplate>
+                        <Grid Background="{Binding Converter={StaticResource CalltypeToBackgroundConverterKey}}">
+                            <TextBlock Text="{Binding}" VerticalAlignment="Center" HorizontalAlignment="Left" Padding="10"/>
+                        </Grid>
+                    </DataTemplate>
+                </ComboBox.ItemTemplate>
+            </ComboBox>
+            
         </StackPanel>
 
         <!-- Calls List -->
@@ -32,29 +54,29 @@
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="100"/>
                     <ColumnDefinition Width="150"/>
-                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="250"/>
                     <ColumnDefinition Width="150"/>
                     <ColumnDefinition Width="120"/>
                     <ColumnDefinition Width="100"/>
                 </Grid.ColumnDefinitions>
 
                 <!-- Column Headers with Borders (Part of the Same Grid) -->
-                <Border Grid.Column="0" BorderBrush="Black" BorderThickness="1">
+                <Border Grid.Column="0" BorderBrush="Black" BorderThickness="1" Height="30">
                     <TextBlock Text="ID" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5"/>
                 </Border>
-                <Border Grid.Column="1" BorderBrush="Black" BorderThickness="1">
+                <Border Grid.Column="1" BorderBrush="Black" BorderThickness="1" Height="30">
                     <TextBlock Text="Call Type" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5"/>
                 </Border>
-                <Border Grid.Column="2" BorderBrush="Black" BorderThickness="1">
+                <Border Grid.Column="2" BorderBrush="Black" BorderThickness="1" Height="30">
                     <TextBlock Text="Address" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5"/>
                 </Border>
-                <Border Grid.Column="3" BorderBrush="Black" BorderThickness="1">
+                <Border Grid.Column="3" BorderBrush="Black" BorderThickness="1" Height="30">
                     <TextBlock Text="Opening Time" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5"/>
                 </Border>
-                <Border Grid.Column="4" BorderBrush="Black" BorderThickness="1">
+                <Border Grid.Column="4" BorderBrush="Black" BorderThickness="1" Height="30">
                     <TextBlock Text="Distance" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5"/>
                 </Border>
-                <Border Grid.Column="5" BorderBrush="Black" BorderThickness="1">
+                <Border Grid.Column="5" BorderBrush="Black" BorderThickness="1" Height="30">
                     <TextBlock Text="Select" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5"/>
                 </Border>
 
@@ -67,28 +89,28 @@
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="100"/>
                                     <ColumnDefinition Width="150"/>
-                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="250"/>
                                     <ColumnDefinition Width="150"/>
                                     <ColumnDefinition Width="120"/>
                                     <ColumnDefinition Width="100"/>
                                 </Grid.ColumnDefinitions>
 
-                                <Border Grid.Column="0" BorderBrush="Black" BorderThickness="1">
+                                <Border Grid.Column="0" BorderBrush="Black" BorderThickness="1" Height="30">
                                     <TextBlock Text="{Binding Id}" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5"/>
                                 </Border>
-                                <Border Grid.Column="1" BorderBrush="Black" BorderThickness="1">
+                                <Border Grid.Column="1" BorderBrush="Black" BorderThickness="1" Height="30">
                                     <TextBlock Text="{Binding CallType}" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5"/>
                                 </Border>
-                                <Border Grid.Column="2" BorderBrush="Black" BorderThickness="1">
+                                <Border Grid.Column="2" BorderBrush="Black" BorderThickness="1" Height="30">
                                     <TextBlock Text="{Binding FullAddress}" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5"/>
                                 </Border>
-                                <Border Grid.Column="3" BorderBrush="Black" BorderThickness="1">
+                                <Border Grid.Column="3" BorderBrush="Black" BorderThickness="1" Height="30">
                                     <TextBlock Text="{Binding OpenTime}" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5"/>
                                 </Border>
-                                <Border Grid.Column="4" BorderBrush="Black" BorderThickness="1">
+                                <Border Grid.Column="4" BorderBrush="Black" BorderThickness="1" Height="30">
                                     <TextBlock Text="{Binding DistanceFromVolunteer}" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5"/>
                                 </Border>
-                                <Border Grid.Column="5" BorderBrush="Black" BorderThickness="1">
+                                <Border Grid.Column="5" BorderBrush="Black" BorderThickness="1" Height="30">
                                     <Button Content="Select" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5" Click="SelectButton_Click"/>
                                 </Border>
                             </Grid>
